feat(🔺): new async handling (#275)